# ElfHookTest

./: README.md  build.gradle  settings.gradle  version.gradle
SoTest/: build.gradle
SoTest/src/androidTest/java/com/example/sotest/: ExampleInstrumentedTest.java
SoTest/src/main/: AndroidManifest.xml
SoTest/src/main/jni/: CMakeLists.txt  DlsymEntryPoint.cpp  DlsymTest.cpp  DlsymTest.h  DlsymTestCall.cpp  DlsymTestCall.h  StructTest.h
SoTest/src/main/res/values/: strings.xml
app/: build.gradle
app/libs/armeabi-v7a/: libsotest.idb
app/src/androidTest/java/com/yan/inlinehooktest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/yan/inlinehooktest/: App.java  CrashManager.java  MainActivity.java
app/src/main/java/com/yan/sotest/: SoTest.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/yan/inlinehooktest/: ExampleUnitTest.java
forktest/: build.gradle
forktest/src/: CMakeLists.txt
forktest/src/androidTest/java/com/example/forktest/: ExampleInstrumentedTest.java
forktest/src/main/: AndroidManifest.xml
forktest/src/main/cpp/: ForkTest.cpp  ForkTest.h
forktest/src/main/java/com/example/forktest/: ForkTest.java
forktest/src/test/java/com/example/forktest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
